--- a/quecine/quecine/templates/home/index.html
+++ b/quecine/quecine/templates/home/index.html
@@ -1,1 +1,77 @@
-ola
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Que cine</title>
+	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12"><h1>Cartelera de Cine</h1></div>
+		</div>
+		<br/>
+		<div class="row">
+			<div class="col-lg-2"><button class="btn btn-primary" id="mostrar">Mostrar Datos</button></div>
+			<div class="col-lg-2"><button class="btn btn-default" id="sincronizar">Sincronizar</button></div>
+		</div>
+		<br/>
+		<div class="alert alert-info" id="alert">
+		</div>
+		<br/>
+		<div class="row">
+			<div class="col-lg-12">
+				<table class="table table-striped table-bordered table-hover" id="table">
+					<thead>
+						<tr>
+							<th>N°</th>
+							<th>Cine</th>
+							<th>Pelicula</th>
+							<th>Horario</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for p in pelicula %}
+						<tr>
+							<td>{{forloop.counter}}</td>
+							<td>Cineplanet</td>
+							<td>{{p.pelicula}}</td>
+							<td>12:50 13:40 17:30</td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+				<center id="loading"><img src="http://tapcities.com/img/ajax-loading.gif"></center>
+			</div>
+		</div>
+	</div>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>
+	<script type="text/javascript" src="{{STATIC_URL}}js/bootstrap.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('#alert, #loading').hide();
+			$('#sincronizar').click(function(){
+				$.ajax({
+					type: "POST",
+					url: "http://127.0.0.1:8000/quecine/sincronizar/",
+					data: {csrfmiddlewaretoken:'{{ csrf_token }}'},
+				}).done(function(data){
+					$('#alert').append('<button type="button" class="close" data-dismiss="alert">&times;</button><strong>Warning!</strong> La información se ha sincronizado satisfactoriamente');
+					$('#table tbody').html(data);
+				})
+			});
+		});
+
+		$(document).ajaxStart(function(){
+			$('#table').hide();
+			$('#loading').show();			
+		});
+
+		$(document).ajaxComplete(function(){
+			$('#loading').hide();
+			$('#table').show();			
+		});
+	</script>
+</body>
+</html>
