--- a/app/style/action_menu.css
+++ b/app/style/action_menu.css
@@ -129,17 +129,14 @@ form[role="dialog"][data-type="action"] > header button {
   text-decoration: none;
 }
 
-/* Pressed state */
-form[role="dialog"][data-type="action"] > header a::-moz-focus-inner,
-form[role="dialog"][data-type="action"] > header button::-moz-focus-inner,
-form[role="dialog"][data-type="action"] > header a:active,
-form[role="dialog"][data-type="action"] > header button:active,
-form[role="dialog"][data-type="action"] > header a:focus,
-form[role="dialog"][data-type="action"][data-type="action"] > header button:focus {
-  outline: none !important;
-  border: none !important;
+form[role="dialog"][data-type="action"] button::-moz-focus-inner,
+form[role="dialog"][data-type="object"] button::-moz-focus-inner {
+  outline: none;
+  border: none;
+  margin-top: -0.2rem; /* To fix line-height bug (697451) */
 }
 
+/* Pressed state */
 form[role="dialog"][data-type="action"] > header a:active .icon:after,
 form[role="dialog"][data-type="action"] > header button:active .icon:after,
 form[role="dialog"][data-type="action"] > header menu[type="toolbar"] a:active,
@@ -272,7 +269,7 @@ form[role="dialog"][data-type="object"] > menu > button {
   color: #fff;
   text-shadow: none;
   text-align: left;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   margin: 0 1.5rem 1rem 1.5rem;
   background: #5f5f5f padding-box;
   border-radius: 0.2rem;
