--- a/app/style/confirm.css
+++ b/app/style/confirm.css
@@ -72,7 +72,9 @@ form[role="dialog"][data-type="confirm"] menu {
 form[role="dialog"][data-type="confirm"] menu button::-moz-focus-inner {
   border: none;
   outline: none;
+  margin-top: -0.2rem; /* To fix line-height bug (697451) */
 }
+
 form[role="dialog"][data-type="confirm"] menu button {
   width: 100%;
   height: 3.8rem;
@@ -102,6 +104,7 @@ form[role="dialog"][data-type="confirm"] menu button:active,
 form[role="dialog"][data-type="confirm"] menu button.recommend:active,
 a.recommend[role="button"]:active  {
   border-color: #008aaa;
+  background: #008aaa;
   color: #333;
 }
 
@@ -210,7 +213,6 @@ form[role="dialog"][data-type="confirm"] figure {
   margin: 1.5rem;
   display: flex;
   align-items: center;
-  flex: column wrap;
 }
 
 form[role="dialog"][data-type="confirm"] figure img {
